--- a/css/styles.css
+++ b/css/styles.css
@@ -650,6 +650,9 @@ footer {
   display: block;
   margin-bottom: 10px;
 }
+.mod-margin {
+  margin-bottom: 20px;
+}
 .not-margin {
   margin-bottom: 0;
 }
@@ -694,7 +697,6 @@ footer {
 
   width: 100%;
   height: 120px;
-  margin-bottom: 20px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
